--- a/css/sass/single.scss
+++ b/css/sass/single.scss
@@ -20,45 +20,67 @@ figure.sewchic-single-featured-image{
 }
 
 /*CONTENT*/
-figure.alignleft {float:left; margin: 0 1em 1em 0;}
-figure.alignright {
-    float:right; 
-    margin:0 0 1em 1em;
-    figcaption{
-        text-align:right;
-    }
-}
-figure.aligncenter {
-    display: block; 
-    margin-left: auto; 
-    margin-right: auto;
-    figcaption{
-        text-align:center;
-    }
-}
-img.alignright {float:right; margin:0 0 1em 1em}
-img.alignleft {float:left; margin:0 1em 1em 0}
-img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-a img.alignright {float:right; margin:0 0 1em 1em}
-a img.alignleft {float:left; margin:0 1em 1em 0}
-a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 
-.content{
+@media screen and (min-width:768px){
+    figure.alignleft {float:left; margin: 0 1em 1em 0;}
+    figure.alignright {
+        float:right; 
+        margin:0 0 1em 1em;
+        figcaption{
+            text-align:right;
+        }
+    }
+    figure.aligncenter {
+        display: block; 
+        margin-left: auto; 
+        margin-right: auto;
+        figcaption{
+            text-align:center;
+        }
+    }
+    img.alignright {float:right; margin:0 0 1em 1em}
+    img.alignleft {float:left; margin:0 1em 1em 0}
+    img.aligncenter {display: block; margin-left: auto; margin-right: auto}
+    a img.alignright {float:right; margin:0 0 1em 1em}
+    a img.alignleft {float:left; margin:0 1em 1em 0}
+    a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 }
+
+
 
 
 /***********************
 * POSTS
 ***********************/
 .sewchic-post-content{
-    img{
+    img, figure{
         width: 100%;
         height: auto;
         max-height:100%;
     }
 }
 
+@media screen and (min-width: 768px){
+    .sewchic-post-content{
+        img, figure{
+            width:auto;
+            max-width:100%;
+        }
+        ul, ol{
+            width:auto;
+            overflow:hidden;
+            padding-left:25px;
+        }
+    }
+}
 
+@media screen and (max-width:768px){
+    .sewchic-post-content{
+        figure{
+            max-width:initial !important;
+        }
+    }
+}
 
 /***********************
 * PAGES
