--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -184,13 +184,13 @@ body{
     a{color:$black}
 }
 
-.sewchic-post-container{
+.sewchic-feed-post-container{
     h1, h2, h3, h4, h5, h6{
         margin-top:30px;
     }
 }
 
-.sewchic-post{
+.sewchic-feed-post{
     display:block;
     background-color: $light-purple;
     background-repeat: no-repeat;
@@ -203,10 +203,10 @@ body{
 
     text-align:right;
     position:relative;
-    &.sewchic-post-large{
+    &.sewchic-feed-post-large{
         height:500px;    
     }
-    &.sewchic-post-small{
+    &.sewchic-feed-post-small{
         height:242px;
         margin-top:16px;
     }
@@ -214,7 +214,7 @@ body{
         opacity:0.5;
         filter: alpha(opacity=50);
     }
-    .sewchic-post-title{
+    .sewchic-feed-post-title{
         border:white solid 1px;
         background-color:rgba(255,255,255,0.75);
         padding:10px 15px;
@@ -291,7 +291,7 @@ body{
         }
     }
 
-    .sewchic-post.sewchic-post-small:first-of-type{
+    .sewchic-feed-post.sewchic-feed-post-small:first-of-type{
         margin-top:0px;
     }
 }
