--- a/css/sass/woocommerce.scss
+++ b/css/sass/woocommerce.scss
@@ -147,6 +147,7 @@ ul.page-numbers{
     margin:20px 0;
     li{
         display:inline-block;
+        padding: 10px 0;
         a, span{
             padding: 10px 13px;
             border: solid 1px $light-grey;
