--- a/css/sass/single.scss
+++ b/css/sass/single.scss
@@ -203,3 +203,9 @@ figure.sewchic-single-featured-image{
     }
 }
 
+@media screen and (min-width:992px){
+    #sewchic_comments_area{
+        border-bottom:0;
+    }
+}
+
