--- a/css/sass/woocommerce.scss
+++ b/css/sass/woocommerce.scss
@@ -847,6 +847,14 @@ nav.woocommerce-MyAccount-navigation{
     width:100%;
 }
 
+@media screen and (min-width:768px) and (max-width:991px){
+    .woocommerce-product-search input{
+        max-width:700px;
+        &[type="submit"]{
+            width:auto;
+        }
+    }
+}
 @media screen and (min-width:992px){
 }
 
