--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -593,6 +593,11 @@ nav.woocommerce-MyAccount-navigation ul {
   margin-top: 5px;
   width: 100%; }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .woocommerce-product-search input {
+    max-width: 700px; }
+    .woocommerce-product-search input[type="submit"] {
+      width: auto; } }
 @media screen and (min-width: 1200px) {
   .woocommerce-mini-cart__buttons a {
     display: initial;
