--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
  * TODO: RESEARCH THE LICENSES AND TAGS ELEMENTS OF THIS THING
  */
 
-@import url('css/woocommerce.css');
-@import url('css/single.css');
-@import url('css/main.css');
+@import url('assets/css/woocommerce.css');
+@import url('assets/css/single.css');
+@import url('assets/css/archive.css');
+@import url('assets/css/main.css');
