mobile first archive feeds

--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -3,6 +3,7 @@
 $headerpink : #fbdedd;
 $beige : #fbfae7;
 $black : #222;
+$white : white;
 $light-grey: #aeaeae;
 $lighter-grey: #efefef;
 $light-purple: #fff2ff;
