--- a/assets/css/archive.css
+++ b/assets/css/archive.css
@@ -1,6 +1,25 @@
+/*this is the colors stylesheet*/
 ul.sewchic-loop-posts {
   list-style-type: none;
-  margin: 0;
+  margin: 30px 0;
   padding: 0; }
+  ul.sewchic-loop-posts li {
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #efefef; }
+    ul.sewchic-loop-posts li .sewchic-loop-post__image {
+      width: 100%;
+      height: 0;
+      padding-bottom: 100%;
+      background-size: cover;
+      background-origin: border-box;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-color: #efefef; }
+    ul.sewchic-loop-posts li .sewchic-loop-post__title {
+      font-size: 30px; }
 
 /*# sourceMappingURL=archive.css.map */
