--- a/assets/css/sass/archive.scss
+++ b/assets/css/sass/archive.scss
@@ -1,6 +1,41 @@
 //styles for post archives
+@import 'colors';
+
 ul.sewchic-loop-posts{
     list-style-type:none;
-    margin:0;
+    margin:30px 0;
     padding:0;
+    li{
+        text-align:center; 
+        overflow:hidden;
+        position: relative;
+        padding-bottom:15px;
+        margin-bottom:15px;
+        border-bottom: 1px solid $lighter-grey;
+
+        .sewchic-loop-post__image{
+            width:100%;
+            height: 0;
+            padding-bottom:100%;
+            background-size:cover;
+            background-origin:border-box;
+            background-position:center center;
+            background-repeat:no-repeat;
+            background-color:$lighter-grey;
+        }
+        
+        .sewchic-loop-post__title{
+            font-size:30px;
+            //position:absolute;
+            //bottom:15px;
+            //right:10px;
+            //padding: 10px;
+            //background-color:$white;
+            //opacity:0.7;
+            //color: $black;
+            //max-width:95%;
+            //font-size:16px;
+        }
+
+    }
 }
