--- a/assets/css/archive.css
+++ b/assets/css/archive.css
@@ -22,4 +22,31 @@ ul.sewchic-loop-posts {
     ul.sewchic-loop-posts li .sewchic-loop-post__title {
       font-size: 30px; }
 
+@media screen and (min-width: 768px) {
+  ul.sewchic-loop-posts li {
+    display: inline-block;
+    width: 45%;
+    max-width: 496px;
+    margin: 0 2%;
+    border: none; }
+    ul.sewchic-loop-posts li .sewchic-loop-post__title {
+      position: absolute;
+      bottom: 15px;
+      right: 10px;
+      padding: 10px;
+      background-color: white;
+      opacity: 0.8;
+      max-width: 94%;
+      font-size: 20px; } }
+@media screen and (min-width: 992px) {
+  ul.sewchic-loop-posts li {
+    width: 30%;
+    margin: 0 1%;
+    max-width: 340px; } }
+@media screen and (min-width: 1200px) {
+  ul.sewchic-loop-posts li {
+    width: 22.5%;
+    margin: 0 1%;
+    max-width: initial; } }
+
 /*# sourceMappingURL=archive.css.map */
