--- a/assets/css/sass/archive.scss
+++ b/assets/css/sass/archive.scss
@@ -26,16 +26,46 @@ ul.sewchic-loop-posts{
         
         .sewchic-loop-post__title{
             font-size:30px;
-            //position:absolute;
-            //bottom:15px;
-            //right:10px;
-            //padding: 10px;
-            //background-color:$white;
-            //opacity:0.7;
-            //color: $black;
-            //max-width:95%;
-            //font-size:16px;
         }
+    }
+}
 
+@media screen and (min-width:768px){
+    ul.sewchic-loop-posts{
+        li{
+            display: inline-block;
+            width: 45%;
+            max-width: 496px;
+            margin: 0 2%;
+            border: none;
+
+            .sewchic-loop-post__title{
+                position:absolute;
+                bottom:15px;
+                right:10px;
+                padding: 10px;
+                background-color:$white;
+                opacity:0.8;
+                max-width:94%;
+                font-size:20px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width:992px){
+    ul.sewchic-loop-posts li{
+        width:30%;
+        margin: 0 1%;
+        max-width:340px;
+    }
+}
+
+@media screen and (min-width:1200px){
+    ul.sewchic-loop-posts li{
+        width:22.5%;
+        margin:0 1%;
+        max-width:initial;
+        
     }
 }
