style fix to restore normal nav display on account page

--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -773,6 +773,7 @@ nav.woocommerce-MyAccount-navigation{
         margin:0;
         padding:0;
         list-style-type:none;
+        overflow: visible;
         li{
             text-align:center; 
             a{
