various theme check and bug fixes

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-/* Theme Name: Sew Chic
+/* Theme Name: SewChic
  * Description: An ecommerce, blogging theme, custom built for Sew Chic Pattern Company
  * Author: Landon Hemsley
- * Author URI: http://landonhemsley.com
+ * Author URI: http://landonhemsley.com/clients/sewchic
+ * License: GPL-3.0+
+ * License URI: https://opensource.org/licenses/GPL-3.0
  * Version: 1.0
  * License: None
  * Text Domain: sewchic
