fixup! cart styles after woocommerce default styles nuked

--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -4,13 +4,16 @@ $headerpink : #fbdedd;
 $beige : #fbfae7;
 $black : #222;
 $white : white;
+$red : red;
 $light-grey: #aeaeae;
+$cart-grey: rgba(0,0,0,0.1);
 $lighter-grey: #efefef;
 $light-purple: #fff2ff;
 $navbarIconBars: #bbb;
 $navbarToggleBg: #ddd;
 $saleRed:#de0000;
 $requiredRed:#a00;
+$deepRed: #700;
 $priceGreen:#00ae00;
 $addToCartBlue: #ced0ff;
 $addToCartBlue2: #878ac1;
