--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -4,32 +4,13 @@
 span.required {
   color: #a00; }
 
-.woocommerce a.button, .woocommerce input.button, .woocommerce input.submit, .woocommerce button.button {
-  background-color: #efefef;
-  border: 1px solid #aeaeae;
-  color: #222;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-weight: 400;
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  touch-action: manipulation;
-  -ms-touch-action: manipulation;
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none; }
-  .woocommerce a.button:hover, .woocommerce a.button:active, .woocommerce input.button:hover, .woocommerce input.button:active, .woocommerce input.submit:hover, .woocommerce input.submit:active, .woocommerce button.button:hover, .woocommerce button.button:active {
-    background-color: white; }
-.woocommerce a.button.alt, .woocommerce input.button.alt, .woocommerce input.submit.alt, .woocommerce button.button.alt {
-  background-color: #878ac1;
-  color: white; }
-  .woocommerce a.button.alt:hover, .woocommerce a.button.alt:active, .woocommerce input.button.alt:hover, .woocommerce input.button.alt:active, .woocommerce input.submit.alt:hover, .woocommerce input.submit.alt:active, .woocommerce button.button.alt:hover, .woocommerce button.button.alt:active {
-    background-color: #ced0ff;
-    color: #515151; }
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  width: 1px;
+  word-wrap: normal !important; }
 
 a.button, input.button, input.submit, button.button, input[type="submit"] {
   background-color: #efefef;
@@ -162,31 +143,144 @@ ul.page-numbers {
     height: initial !important; } }
 /*end generics and overrides*/
 /*cart styles*/
-form.woocommerce-cart-form td.product-remove a.remove {
-  width: 100%;
-  font-size: 0;
-  padding: 5px 0 33px; }
-  form.woocommerce-cart-form td.product-remove a.remove:hover {
-    color: red !important;
-    background: white; }
-  form.woocommerce-cart-form td.product-remove a.remove:before {
-    content: attr(aria-label);
-    padding: 5px 7px;
-    color: white;
-    background: red;
-    border-radius: 5px;
-    font-size: 27px;
-    background-image: linear-gradient(to bottom, red 0, #a00 100%); }
-form.woocommerce-cart-form .input-text {
-  height: initial; }
-form.woocommerce-cart-form div.coupon .input-text {
-  max-width: initial;
-  width: 100% !important;
-  min-width: inital;
-  margin: 5px 0; }
-form.woocommerce-cart-form div.coupon .button {
-  width: 100% !important; }
+table.shop_table_responsive {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px; }
+  table.shop_table_responsive thead {
+    display: none; }
+  table.shop_table_responsive, table.shop_table_responsive tbody, table.shop_table_responsive tr, table.shop_table_responsive td {
+    display: block; }
+  table.shop_table_responsive tr:nth-child(2n) td, table.shop_table_responsive tr:nth-child(2n) th {
+    background-color: rgba(0, 0, 0, 0.025); }
+  table.shop_table_responsive tr + tr, table.shop_table_responsive tr td + td, table.shop_table_responsive tr th + th {
+    border-top: 1px solid rgba(0, 0, 0, 0.1); }
+  table.shop_table_responsive tr > th {
+    display: none; }
+  table.shop_table_responsive td, table.shop_table_responsive th {
+    padding: 6px 12px;
+    vertical-align: middle;
+    text-align: right; }
+    table.shop_table_responsive td:before, table.shop_table_responsive th:before {
+      content: attr(data-title);
+      font-weight: 700;
+      float: left; }
+    table.shop_table_responsive td.product-thumbnail, table.shop_table_responsive th.product-thumbnail {
+      display: none; }
+    table.shop_table_responsive td.product-remove, table.shop_table_responsive th.product-remove {
+      width: 100%;
+      text-align: center; }
+      table.shop_table_responsive td.product-remove a.remove, table.shop_table_responsive th.product-remove a.remove {
+        width: 100%;
+        font-size: 0;
+        padding: 5px 0 33px; }
+        table.shop_table_responsive td.product-remove a.remove:hover, table.shop_table_responsive td.product-remove a.remove:active, table.shop_table_responsive th.product-remove a.remove:hover, table.shop_table_responsive th.product-remove a.remove:active {
+          text-decoration: none; }
+          table.shop_table_responsive td.product-remove a.remove:hover:before, table.shop_table_responsive td.product-remove a.remove:active:before, table.shop_table_responsive th.product-remove a.remove:hover:before, table.shop_table_responsive th.product-remove a.remove:active:before {
+            background-image: linear-gradient(to bottom, #a00 0, #700 100%); }
+        table.shop_table_responsive td.product-remove a.remove:before, table.shop_table_responsive th.product-remove a.remove:before {
+          content: attr(aria-label);
+          padding: 5px 7px;
+          color: white;
+          background: red;
+          border-radius: 5px;
+          font-size: 27px;
+          background-image: linear-gradient(to bottom, red 0, #a00 100%); }
+    table.shop_table_responsive td.product-thumbnail, table.shop_table_responsive th.product-thumbnail {
+      display: none; }
+    table.shop_table_responsive td.product-quantity .qty, table.shop_table_responsive th.product-quantity .qty {
+      width: 3.5em;
+      height: 1.6em;
+      text-align: center; }
+    table.shop_table_responsive td.actions, table.shop_table_responsive th.actions {
+      text-align: left; }
+      table.shop_table_responsive td.actions .input-text, table.shop_table_responsive th.actions .input-text {
+        max-width: initial;
+        width: 100%;
+        min-width: inital; }
+      table.shop_table_responsive td.actions .button, table.shop_table_responsive th.actions .button {
+        width: 100%; }
+      table.shop_table_responsive td.actions div.coupon, table.shop_table_responsive th.actions div.coupon {
+        padding-bottom: 5px; }
 
+.wc-proceed-to-checkout {
+  padding: 1em 0; }
+  .wc-proceed-to-checkout a.button.checkout-button {
+    display: block;
+    padding: 1em; }
+
+@media screen and (min-width: 768px) {
+  table.shop_table_responsive {
+    display: table;
+    width: 100%; }
+    table.shop_table_responsive thead {
+      display: table-row-group; }
+    table.shop_table_responsive tbody {
+      display: table-row-group; }
+    table.shop_table_responsive tr {
+      display: table-row; }
+    table.shop_table_responsive tr > th {
+      display: table-cell; }
+    table.shop_table_responsive td, table.shop_table_responsive th {
+      display: table-cell;
+      text-align: right; }
+      table.shop_table_responsive td:before, table.shop_table_responsive th:before {
+        content: none; }
+      table.shop_table_responsive td.product-remove, table.shop_table_responsive th.product-remove {
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        width: auto; }
+        table.shop_table_responsive td.product-remove a.remove, table.shop_table_responsive th.product-remove a.remove {
+          width: auto;
+          font-size: 20px;
+          font-weight: 700;
+          background: transparent;
+          color: red;
+          padding: 5px 10px;
+          border-radius: 20px; }
+          table.shop_table_responsive td.product-remove a.remove:hover, table.shop_table_responsive td.product-remove a.remove:active, table.shop_table_responsive th.product-remove a.remove:hover, table.shop_table_responsive th.product-remove a.remove:active {
+            color: white;
+            background: #a00; }
+          table.shop_table_responsive td.product-remove a.remove:before, table.shop_table_responsive th.product-remove a.remove:before {
+            content: none; }
+      table.shop_table_responsive td.product-thumbnail, table.shop_table_responsive th.product-thumbnail {
+        display: table-cell;
+        min-width: 32px; }
+        table.shop_table_responsive td.product-thumbnail img, table.shop_table_responsive th.product-thumbnail img {
+          width: 32px; }
+      table.shop_table_responsive td.product-quantity .qty, table.shop_table_responsive th.product-quantity .qty {
+        width: 4em;
+        height: 2em;
+        text-align: right; }
+      table.shop_table_responsive td.actions, table.shop_table_responsive th.actions {
+        position: relative; }
+        table.shop_table_responsive td.actions .input-text, table.shop_table_responsive th.actions .input-text {
+          width: auto; }
+        table.shop_table_responsive td.actions .button, table.shop_table_responsive th.actions .button {
+          width: auto; }
+        table.shop_table_responsive td.actions div.coupon, table.shop_table_responsive th.actions div.coupon {
+          padding-top: 5px; }
+        table.shop_table_responsive td.actions > input[type="submit"], table.shop_table_responsive th.actions > input[type="submit"] {
+          position: absolute;
+          top: 11px;
+          right: 7px; }
+
+  .cart-collaterals .cross-sells {
+    float: left;
+    width: 28%; }
+    .cart-collaterals .cross-sells ul.products {
+      padding: 0; }
+      .cart-collaterals .cross-sells ul.products li {
+        width: 100%;
+        margin: 0; }
+  .cart-collaterals .cart_totals {
+    float: right;
+    width: 66%; }
+    .cart-collaterals .cart_totals table.shop_table_responsive th {
+      text-align: left; }
+  .cart-collaterals:after {
+    content: '.';
+    font-size: 0;
+    display: block;
+    clear: both; } }
 /*breadcrumbs*/
 .woocommerce-breadcrumb {
   display: none;
@@ -375,22 +469,6 @@ table.variations {
 
   table.variations {
     margin: 10px 0 20px; }
-
-  form.woocommerce-cart-form td.product-remove a.remove {
-    width: 1em;
-    padding: 0;
-    margin: auto;
-    font-size: 27px; }
-    form.woocommerce-cart-form td.product-remove a.remove:hover {
-      color: white !important;
-      background: red; }
-    form.woocommerce-cart-form td.product-remove a.remove:before {
-      content: none; }
-  form.woocommerce-cart-form div.coupon .input-text {
-    max-width: 195px;
-    margin: 0 5px; }
-  form.woocommerce-cart-form div.coupon .button {
-    width: auto !important; }
 
   .wcsc-cart-add-form {
     margin: 20px 0; }
